Fix word wrap overflow issue

--- a/src/components/discord-message/discord-message.css
+++ b/src/components/discord-message/discord-message.css
@@ -71,6 +71,7 @@
 	width: 100%;
 	line-height: 160%;
 	font-weight: normal;
+	overflow-wrap: anywhere;
 }
 
 .discord-message .discord-message-body {
